objects/LLC_BI__Classification__c.object
<CustomObject>
    <description>The Classification Object contains text categories that relate to Spread Statement Records and Spread Statement Record Totals.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>The category this Spread Statement Record or Spread Statement Total Group relates to.</description>
        <inlineHelpText>The category this Spread Statement Record or Spread Statement Total Group relates to.</inlineHelpText>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMA Benchmarking</fullName>
                </value>
                <value>
                    <fullName>NOI Statement</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Classification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>